tests/semantic/fact_number/fact_number.err
Error: Ambiguous constant (couldn't find any type solution) in file fact_number.dl at line 8
F(1000,"0002").
--^-------------
1 errors generated, evaluation aborted